# lipl-display-flutter

./: .gitignore  README.md  build_snapshot.sh  justfile  lipl-gatt-input.txt  pubspec.yaml
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: bridge_generated.h
lib/: bridge_generated.dart  bridge_generated.dart.old  command.dart  command.g.dart  ffi.dart  lipl_display.dart  lipl_display.freezed.dart  lipl_display.g.dart  main.dart  message.dart  part.dart  part.freezed.dart  part.g.dart  status.dart  status.freezed.dart  status.g.dart
lib/gatt/: command.dart  command.freezed.dart  display.dart  display.freezed.dart  display.g.dart  gatt.dart  message.dart  part.dart  part.freezed.dart  status.dart  status.freezed.dart
lib/io/: io.dart
lib/ui/: display_app.dart  gatt_error.dart  show_data.dart  show_message.dart  ui.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
peripheral/: Cargo.toml  Cross.toml  build.rs  cross.sh
peripheral/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
test/: message_test.dart
web/: index.html  manifest.json
