[package]
name = "peripheral"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
opt-level = "z"

[build-dependencies]
flutter_rust_bridge_codegen = "1.75"
cargo_metadata = "0.15"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
flutter_rust_bridge = "1.75"
futures = "0.3"
lipl-gatt-bluer = { git = "git://paulmin.nl/rust/lipl-gatt-bluer.git"}
login-poweroff-reboot = { git = "git://paulmin.nl/rust/login-poweroff-reboot.git" }

[package.metadata.bridge]
rust_input = "src/api.rs"
dart_output = "lib/bridge_generated.dart"
