[package]
name = "peripheral"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
opt-level = "z"

[build-dependencies]
flutter_rust_bridge_codegen = "1.81.0"
cargo_metadata = "0.18"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
flutter_rust_bridge = "1.81.0"
futures = "0.3"
lipl-display-common = "0.4"
lipl-gatt-bluer = "0.4"
login-poweroff-reboot = "0.4"

[package.metadata.bridge]
rust_input = "src/api.rs"
dart_output = "lib/bridge_generated.dart"
